RESOLVED FIXED20903
transition end event when -webkit-transition-property: all puts wrong propertyName in event
https://bugs.webkit.org/show_bug.cgi?id=20903
Summary transition end event when -webkit-transition-property: all puts wrong propert...
Chris Marrin
Reported 2008-09-17 14:35:31 PDT
The propertyName in the event is empty if the transition-property is set to all (or left as the default). If you transition multiple properties it is impossible to tell which event is firing for which property. You can see this, for instance, in LayoutTests/transitions/transition-end-event-all-properties.html. It logs an empty propertyName for each event.
Attachments
Patch, including modified layout test (5.15 KB, patch)
2008-09-17 14:38 PDT, Chris Marrin
sam: review+
Chris Marrin
Comment 1 2008-09-17 14:38:34 PDT
Created attachment 23509 [details] Patch, including modified layout test
Simon Fraser (smfr)
Comment 2 2008-09-22 13:20:12 PDT
Committed r36774 M WebCore/ChangeLog M WebCore/page/animation/ImplicitAnimation.cpp M LayoutTests/ChangeLog M LayoutTests/transitions/transition-end-event-all-properties.html M LayoutTests/transitions/transition-end-event-all-properties-expected.txt r36774 = 0f83a518dda6b9973d30f2bae7a1b82083bc5b29 (trunk)
Note You need to log in before you can comment on or make changes to this bug.