2008-09-22  Chris Marrin  <cmarrin@apple.com>

Reviewed by Sam Weinig

        transition end event when -webkit-transition-property: all puts wrong
        propertyName in event
        https://bugs.webkit.org/show_bug.cgi?id=20903

        * page/animation/ImplicitAnimation.cpp:
        (WebCore::ImplicitAnimation::sendTransitionEvent):


Canonical link: https://commits.webkit.org/29050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36774 268f45cc-cd09-0410-ab3c-d52691b4dbfc